# gin

./: .gitignore  Cargo.toml
crates/gin-macros/: Cargo.toml
crates/gin-macros-internals/: Cargo.toml
crates/gin-macros-internals/src/: lib.rs
crates/gin-macros/src/: lib.rs  utils.rs
crates/gin-macros/src/message_macro/: enum_item.rs  mod.rs  scalars.rs  struct_item.rs
examples/: snazzy.rs  tutorial.rs
src/: lib.rs
