[package]
name = "gin-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
derive-syn-parse = "0.1.5"
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full", "extra-traits"] }
tap = "1.0.1"
thiserror = "1.0.30"
